@@ -136,6 +136,7 @@ Trunk (unreleased changes)
 
   BUG FIXES
  
+    HAMA-238: Example fail when performing sparse matrices addition (edwardyoon)
     HAMA-225: Jacobi iteration is in a infinite loop (edwardyoon)
     HAMA-214: Can't run the examples (edwardyoon)
     HAMA-190: Bug in Matrix-Vector multiplication (edwardyoon)
